docs/roadmap-and-releases/versions/v1.5.0/test-report.adoc
== Test Report

=== Testing Scope

The scope of testing is to verify fitment to the specification from the
perspective of 

● Functionality 

● Deployability 

● Configurability 

● Customizability

Verification is performed from the end user perspective and the System
Integrator (SI) point of view. Hence, the software’s Configuration and
Extensibility are also assessed. This ensures the software’s readiness
for use in multiple countries. Since MOSIP is an “API First” product
platform, the Verification scope required comprehensive automation
testing for all the MOSIP APIs. An automation Test Rig was created for
the same. 

==== *Test Approach*

A persona-based approach has been adopted to perform the IV&V by
simulating test scenarios that resemble a real-time implementation. 

A Persona is a fictional character/user profile created to represent a
user type that might use a product/or a service in a similar way.
Persona based testing is a software testing technique that puts software
testers in the customer’s shoes, assesses their needs from the software,
and thereby determines use cases/scenarios that the customers will
execute. The persona’s needs may be addressed through any of the
following. 

* Functionality  
* Deployability  
* Configurability  
* Customizability

The verification methods may differ based on how the need was
addressed. 

For regression check, “MOSIP Test Rig” - an automation testing suite -
is designed and developed to support persona-based testing. MOSIP Test
Rig covers the end to end test execution and reporting. The end to end
functional test scenarios are written starting from pre-registration, to
creating the packet in the registration center, processing the packet
through the registration process, generating UIN, and authenticating
identity using IDA through various permutations and combinations of
cases being covered. MOSIP Test Rig will be an open source artifact that
can also be enhanced and used by countries to validate the SI deliveries
before going live. Persona classes include both negative and positive
personas. Negative persona classes include users like Bribed
Registration Office, Malicious Insider, etc. The needs of positive
persona classes must be met, whereas the software must effectively
restrict the needs of negative persona classes.

==== *Verified configuration* 

Verification is performed on various configurations as mentioned below 

* Default configuration - with 7 Languages
(English/Khmer/Hindi/Kannada/Tamil/Arabic/French)

==== *Main feature tested*

* Signup Portal with mock ID
* Login with a Password with a mock ID
* Forgot Password with mock ID
* Login with Otp with a mock ID
* Login with biometrics with mock ID
* Login with KBI with a mock ID
* Identity verification process with mock ID
* Signup Portal with Mosip IDA
* Login with Password with Mosip IDA
* Forgot Password with Mosip IDA
* Login with Otp with Mosip IDA
* Login with biometrics Mosip IDA
* Login with KBI with Mosip IDA

==== Feature Health

Feature Health

==== *Functional test results*

Below are the test metrics by performing functional testing using mock
MDS, mock Auth, and mock ABIS. The process followed was black box
testing which based its test cases on the specifications of the software
component under test. The functional test was performed in combination
with individual module testing as well as integration testing. Test data
were prepared in line with the user stories. Expected results were
monitored by examining the user interface. The coverage includes GUI
testing, System testing, End-To-End flows across multiple languages and
configurations. The testing cycle included the simulation of multiple
identity schema and respective UI schema configurations.

[cols=",,,",options="header",]
|===
|Total |Passed |Failed |Skipped
|2928 |2785 |97 |46
|===

*Test Rate:* 98% with *Pass rate:* 96%

Here is the detailed breakdown:

*API Based Testing - eSignet:*

[cols=",,,",options="header",]
|===
|Total Test Cases |Passed |Failed |Skipped
|1934 |1829 |79 |26
|===

*UI Based Testing:*

[cols=",,,",options="header",]
|===
|Total Test Cases |Passed |Failed |Skipped
|994 |956 |18 |20
|===

===== *API Testrig results for eSignet and Signup with Mock ID*

*API Based Testrig - eSignet:*

[cols=",,,,",options="header",]
|===
|Total Test Cases |Passed |Failed |Skipped |Ignored
|813 |445 |0 |0 |368
|===

*API Based Testrig - eSignet-signup:*

[cols=",,,,",options="header",]
|===
|Total Test Cases |Passed |Failed |Skipped |Ignored
|554 |516 |34 |4 |0
|===

++{++% hint style="`info`" %} *Note:* 

* In API Based testing - 26 test cases are marked as skipped as they
were not automated and cannot be tested using Postman.
* In UI Based testing - 20 test cases are marked as skipped as they were
out of scope for the release.
* In API Based Testrig - eSignet, 368 testcases are marked as ignored as
VID is not supported. ++{++% endhint %}

===== *Detailed Test metrics:*

Below are the detailed test metrics by performing manual/automation
testing. The project metrics are derived from Defect density, Test
coverage, Test execution coverage, test tracking, and efficiency. 

The various metrics that assist in test tracking and efficiency are as
follows:

* *Passed Test Cases Coverage:* It measures the percentage of passed
test cases. (Number of passed tests / Total number of tests executed) x
100
* *Failed Test Case Coverage:* It measures the percentage of all the
failed test cases. (Number of failed tests / Total number of test cases
executed) x 100

===== *Device and Browser details:*

Device

Browser

OS version

Display resolution

Screen size

Oppo A96 v11.0

Chrome

Android, v11.0

1080x2412 px

6.59

Samsung Galaxy S8 v7.0

Fire fox

Android, v7.0

1440 x 2960 px

5.8

Redmi 6A

edge, chrome & firefox

Android, v9.0

1440 x 720 px

5.45

iPhone XS v15.3

safari

iOS, v15.3

1125 x 2436 px

5.8

iphone 7

safari, chrome, firefox & edge

15.6

750x 1334 px

4.7

Oppo Reno12 Pro

chrome

Android 14

1080 x 2412 pixels

6.7

Redmi A1

chrome

Android 12

720 x 1600 pixels

6.52

Iphone 15 Plus

Safari

IOS 18

2796x1290 pixels

6.7

MOSIP’s MacBook Air

Safari

Sonoma 14.6.1

2560++*++1664

13.6

Nokia T10

chrome

Android 14

800 x 1280 pixels

8

==== *Desktop browser specification*

Browser Compatibility for desktop and mobile:

[cols=",",options="header",]
|===
|OS |Version
|Google Chrome |118. 0.5993.72 and above
|Firefox |118.0.2 and above
|Edge |118.0.2088.46 and above
|Safari |14.1 and above
|===

==== *Sonar Report*

Repository Name

Branch Name

Release Version (POM)

Coverage (++>++80%)

Reliability (0)

Security (0)

Hotspots (0)

Duplications (Less than 3%)

eSignet

release-1.5.x

v1.5.0

86.8%

0

0

0

0%

eSignet Signup

release-1.1.x

v1.1.0

81.2%

0

0

0

0%
